files/gatekeeper-templates/betting-session_time_limits_controls-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: betting-session_time_limits_controls
  annotations:
    rulehub.id: betting.session_time_limits_controls
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: <Kind>
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            requiredLabel:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package rulehub.betting.session_time_limits_controls
        import future.keywords.if

        default deny = []

        # Example: deny with a message
        deny[msg] {
          input.review.kind.kind == "Deployment"
          msg := "igaming.session_time_limits_controls: example violation"
        }
